# paastel

./: .dockerignore  .env  Cargo.toml  Dockerfile.git-sshd  README.md  docker-compose.yml
docker/: git_authorized_keys  sshd_config
migrations/: 20251115164514_init.sql  20251115180159_tokens.sql
sample/: .dockerignore  Dockerfile
sample/static/: index.html
src/: lib.rs  main.rs
src/domain/: models.rs
src/graphql/: auth.rs  auth_helpers.rs  mod.rs  mutation.rs  query.rs  state.rs  types.rs
src/infrastructure/: repositories.rs
