[package]
name = "paastel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
axum = "0.8.7"
dotenvy = "0.15.7"
hex = "0.4.3"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "derive", "migrate", "time"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
