[package]
name = "paastel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
# async-graphql = "7.0.17"
# async-graphql-axum = "7.0.17"
# axum = "0.8.7"
clap = { version = "4.5.51", features = ["derive"] }
# dirs = "6.0.0"
# dotenvy = "0.15.7"
# hex = "0.4.3"
# rand = "0.9.2"
# reqwest = { version = "0.12.24", features = ["json"] }
# serde = { version = "1.0.228", features = ["derive"] }
# serde_json = "1.0.145"
# sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "derive", "migrate", "time"] }
# thiserror = "2.0.17"
# time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
# toml = "0.9.8"
# tracing = "0.1.41"
# tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# build
bollard = { version = "0.19.4", features = ["buildkit_providerless"] }
flate2 = "1.1.5"
futures-util = "0.3.31"
tar = "0.4.44"
bytes = "1.11.0"
http-body-util = "0.1.3"
walkdir = "2.5.0"
globset = "0.4.18"

# [[bin]]
# name = "paastel"
# path = "src/bin/cli.rs"
# test = false
# doc = false

# [[bin]]
# name = "graphql"
# path = "src/main.rs"
# test = false
# doc = false

# [[bin]]
# name = "export-schema"
# path = "src/bin/export_schema.rs"
# test = false
# doc = false

[[bin]]
name = "paastel-git-shell"
path = "src/bin/git_shell.rs"
test = false
doc = false

[[bin]]
name = "paastel-build"
path = "src/bin/build.rs"
test = false
doc = false
